--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,43 @@
+astroid==2.12.13
+black==22.1.0
+blue==0.9.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+click==8.1.3
+dill==0.3.6
+dodgy==0.2.1
+flake8==4.0.1
+flake8-polyfill==1.0.2
 greenlet==2.0.1
 hvac==1.0.2
 idna==3.4
+isort==5.10.1
+lazy-object-proxy==1.8.0
+mccabe==0.6.1
+mypy-extensions==0.4.3
+pathspec==0.10.2
+pep8-naming==0.10.0
+platformdirs==2.5.4
+prospector==1.7.7
 psycopg2==2.9.5
+pycodestyle==2.8.0
+pydocstyle==6.1.1
+pyflakes==2.4.0
 pyhcl==0.4.4
+pylint==2.15.6
+pylint-celery==0.3
+pylint-django==2.5.3
+pylint-flask==0.6
+pylint-plugin-utils==0.7
 python-dotenv==0.21.0
+PyYAML==6.0
 requests==2.28.1
+requirements-detector==0.7
+setoptconf-tmp==0.3.1
+snowballstemmer==2.2.0
 SQLAlchemy==1.4.44
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.6
 urllib3==1.26.12
+wrapt==1.14.1
