--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ hvac = "^1.0.2"
 psycopg2 = "^2.9.5"
 python-dotenv = "^0.21.0"
 sqlalchemy = "^1.4.44"
+mysqlclient = "^2.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
