--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mysqlclient = "^2.1.1"
 blue = "^0.9.1"
 isort = "^5.10.1"
 prospector = "^1.7.7"
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
